--- a/.github/workflows/cfr2.yml
+++ b/.github/workflows/cfr2.yml
@@ -14,7 +14,7 @@ jobs:
           r2-access-key-id: ${{ secrets.R2_ACCESS_KEY }}
           r2-secret-access-key: ${{ secrets.R2_SECRET_ACCESS_KEY }}
           r2-bucket: ${{ secrets.R2_BUCKET }}
-          source-dir: src/
+          source-dir: upload
           destination-dir: ./
           output-file-url: 'true'
       
