--- a/.github/workflows/cfr2.yml
+++ b/.github/workflows/cfr2.yml
@@ -2,7 +2,7 @@ name: cfr2
 
 on:
   push:
-    branches: release
+    branches: main
   
 jobs:
   build:
@@ -10,16 +10,13 @@ jobs:
     steps:
       - name: Checkout release
         uses: actions/checkout@v4
-        with:
-          path: release
-          ref: release
       - uses: ryand56/r2-upload-action@latest
         with:
           r2-account-id: ${{ secrets.R2_ACCOUNT_ID }}
           r2-access-key-id: ${{ secrets.R2_ACCESS_KEY }}
           r2-secret-access-key: ${{ secrets.R2_SECRET_ACCESS_KEY }}
           r2-bucket: ${{ secrets.R2_BUCKET }}
-          source-dir: resource.mcpack
+          source-dir: upload
           destination-dir: ./
           output-file-url: 'true'
       
